# tauri-plugin-reqwest

./: Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.changes/: config.json  initial-release.md  readme.md
examples/svelte-app/: package.json  pnpm-lock.yaml
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
src/: http.rs  lib.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts  tsconfig.json
