[package]
name = "tauri-plugin-reqwest"
version = "0.0.3"
authors = [ "dev@xjie.me" ]
description = ""
edition = "2021"
rust-version = "1.57"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.1.1" }
serde = "1.0"
thiserror = "1.0"
serde_json = "1.0"
chrono = "0.4"
regex = "1.6"
reqwest = { version = "0.11.12", features = ["json","cookies","multipart"]}
